<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/server_phone_number"/>

    <EditText
        android:id="@+id/editApiKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/api_key"
        android:hint="@string/server_api_key"/>

    <EditText
        android:id="@+id/macAddressEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/mac_address"
        android:hint="@string/mac_address"/>

    <Switch
        android:id="@+id/switchServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_server" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_request" />

</LinearLayout>